# dasPostgreSQL

./: .das_module  .das_package  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: docs.yml  tests.yml
bind/: bind_postgres.das
daslib/: postgres_boost.das  postgres_migrate.das  postgres_provider.das  postgres_stmt.das
doc/source/: conf.py  index.rst
doc/source/_templates/: layout.html
doc/source/stdlib/: external_types.rst  index.rst  sec_boost.rst  sec_migrate.rst  sec_provider.rst
doc/source/stdlib/handmade/: module-postgres_boost.rst  module-postgres_migrate.rst  module-postgres_provider.rst
examples/: quick_start.das
src/: aot_postgres.h  cb_dasPOSTGRESQL.h  dasPOSTGRESQL.alias.add.inc  dasPOSTGRESQL.const.inc  dasPOSTGRESQL.cpp  dasPOSTGRESQL.dummy.add.inc  dasPOSTGRESQL.enum.add.inc  dasPOSTGRESQL.enum.class.inc  dasPOSTGRESQL.enum.decl.cast.inc  dasPOSTGRESQL.enum.decl.inc  dasPOSTGRESQL.func.decl.inc  dasPOSTGRESQL.func.reg.inc  dasPOSTGRESQL.func_1.cpp  dasPOSTGRESQL.func_2.cpp  dasPOSTGRESQL.func_3.cpp  dasPOSTGRESQL.func_4.cpp  dasPOSTGRESQL.func_5.cpp  dasPOSTGRESQL.func_6.cpp  dasPOSTGRESQL.func_7.cpp  dasPOSTGRESQL.h  dasPOSTGRESQL.main.cpp  dasPOSTGRESQL.struct.add.inc  dasPOSTGRESQL.struct.cast.inc  dasPOSTGRESQL.struct.class.inc  dasPOSTGRESQL.struct.decl.inc  dasPOSTGRESQL.struct.impl.inc  dasPOSTGRESQL.struct.postadd.inc  dasPOSTGRESQL.userfn.cpp  need_dasPOSTGRESQL.h
tests/sql_conformance/: _conformance_provider.das  test_conf_adapters.das  test_conf_dml_macros.das  test_conf_joins_subq.das  test_conf_migrations.das  test_conf_nullability.das  test_conf_projection_agg.das  test_conf_sql_select.das  test_conf_streaming_txn.das  test_conf_table_crud.das  test_conf_views.das
utils/: postgres2rst.das
