# dasPostgreSQL builds two ways from a single CMakeLists (same pattern as dasDuckDB):
#  - included from a daslang superbuild (the ADD_MODULE_* macros exist): the module
#    links statically into the host app.
#  - configured directly (top-level project, DASLANG_DIR set): the standalone
#    .shared_module build CI, the daspkg index, and -load_module consumers run on.
#
# libpq (the PostgreSQL client library) comes from the platform:
#  - Windows: the pinned EDB binaries zip is downloaded at configure time and the
#    client pieces (headers, libpq.lib, libpq.dll + its 5 dependent DLLs) are
#    extracted into pgsql/. The DLLs are copied next to the .shared_module — the
#    module loader searches the loaded module's own directory for dependents.
#  - Linux/macOS: find_package(PostgreSQL) over the system package (apt libpq-dev,
#    brew libpq — pass -DPostgreSQL_ROOT=/opt/homebrew/opt/libpq for the keg-only
#    brew install). The system libpq resolves at runtime, nothing is copied.
IF(NOT COMMAND ADD_MODULE_CPP)
    cmake_minimum_required(VERSION 3.18)
    project(dasPostgreSQL CXX C)
ENDIF()

IF((NOT DAS_POSTGRESQL_INCLUDED) AND ((NOT ${DAS_POSTGRESQL_DISABLED}) OR (NOT DEFINED DAS_POSTGRESQL_DISABLED)))
SET(DAS_POSTGRESQL_INCLUDED TRUE)
MESSAGE(STATUS "dasPostgreSQL module included.")

SET(DAS_POSTGRESQL_DIR ${CMAKE_CURRENT_LIST_DIR})

# ===== libpq client library =====
IF(WIN32)
    # EDB PostgreSQL binaries package (pinned). Contains the libpq client pieces;
    # only include/, lib/libpq.lib and the 6 runtime DLLs are extracted.
    SET(PGSQL_VERSION "18.4-1")
    SET(PGSQL_ZIP_SHA256 "7effe34c0bf89027b3f171447d351cbc460f4566c8d0f643daec67f140787858")
    SET(PGSQL_DIR ${DAS_POSTGRESQL_DIR}/pgsql)
    SET(PGSQL_RUNTIME_DLLS
        libpq.dll libintl-9.dll libiconv-2.dll libwinpthread-1.dll
        libssl-3-x64.dll libcrypto-3-x64.dll)
    IF(NOT EXISTS "${PGSQL_DIR}/lib/libpq.lib")
        SET(_pgsql_zip ${CMAKE_BINARY_DIR}/postgresql-${PGSQL_VERSION}-windows-x64-binaries.zip)
        MESSAGE(STATUS "Downloading PostgreSQL ${PGSQL_VERSION} (windows-x64) client binaries...")
        FILE(DOWNLOAD
            "https://get.enterprisedb.com/postgresql/postgresql-${PGSQL_VERSION}-windows-x64-binaries.zip"
            ${_pgsql_zip}
            EXPECTED_HASH SHA256=${PGSQL_ZIP_SHA256}
            SHOW_PROGRESS)
        SET(_pgsql_dll_patterns "")
        FOREACH(_d ${PGSQL_RUNTIME_DLLS})
            LIST(APPEND _pgsql_dll_patterns "pgsql/bin/${_d}")
        ENDFOREACH()
        FILE(ARCHIVE_EXTRACT INPUT ${_pgsql_zip} DESTINATION ${DAS_POSTGRESQL_DIR}
            PATTERNS "pgsql/include/*" "pgsql/lib/libpq.lib" ${_pgsql_dll_patterns})
    ENDIF()
    SET(PQ_INCLUDE_DIRS ${PGSQL_DIR}/include)
    SET(PQ_LINK_LIBS ${PGSQL_DIR}/lib/libpq.lib)
ELSE()
    FIND_PACKAGE(PostgreSQL REQUIRED)
    SET(PQ_INCLUDE_DIRS ${PostgreSQL_INCLUDE_DIRS})
    SET(PQ_LINK_LIBS ${PostgreSQL_LIBRARIES})
ENDIF()

# binding source files (generated by bind/bind_postgres.das + hand-written
# main.cpp/userfn.cpp). The func_*.cpp chunk count varies with the bound-function
# count, so glob them — always `rm src/dasPOSTGRESQL.func_*.cpp` before
# regenerating, then re-run CMake configure.
file(GLOB DAS_POSTGRESQL_FUNC_SRC "${DAS_POSTGRESQL_DIR}/src/dasPOSTGRESQL.func_*.cpp")
SET(DAS_POSTGRESQL_BIND_SRC
    ${DAS_POSTGRESQL_DIR}/src/dasPOSTGRESQL.cpp
    ${DAS_POSTGRESQL_DIR}/src/dasPOSTGRESQL.main.cpp
    ${DAS_POSTGRESQL_DIR}/src/dasPOSTGRESQL.userfn.cpp
    ${DAS_POSTGRESQL_FUNC_SRC}
)

IF(COMMAND ADD_MODULE_CPP)
    # ===== daslang superbuild: static-embed =====
    # `require postgres/<name>` -> daslib/<name>.das; the glob IS the
    # .das_module register_native_path list (file stem == module name throughout).
    # NOTE: on Windows the host app must ship the libpq runtime DLLs next to its
    # executable.
    ADD_MODULE_CPP(dasPOSTGRESQL)
    FILE(GLOB _dasPostgreSQL_das_files "${DAS_POSTGRESQL_DIR}/daslib/*.das")
    FOREACH(_f ${_dasPostgreSQL_das_files})
        GET_FILENAME_COMPONENT(_n "${_f}" NAME_WE)
        ADD_MODULE_DAS(postgres daslib ${_n})
    ENDFOREACH()

    ADD_DAS_STATIC_MODULE_LIB(libDasModulePostgreSQL ${DAS_POSTGRESQL_BIND_SRC})
    TARGET_INCLUDE_DIRECTORIES(libDasModulePostgreSQL PRIVATE
        ${PQ_INCLUDE_DIRS}
        ${DAS_POSTGRESQL_DIR}/src
    )
    TARGET_COMPILE_FEATURES(libDasModulePostgreSQL PRIVATE cxx_std_17)
    TARGET_LINK_LIBRARIES(libDasModulePostgreSQL PUBLIC ${PQ_LINK_LIBS})
ELSE()
    # ===== standalone: dasModulePostgreSQL.shared_module =====
    if(NOT DEFINED DASLANG_DIR)
        message(FATAL_ERROR "DASLANG_DIR must be set to the daslang SDK root")
    endif()

    add_library(dasModulePostgreSQL SHARED ${DAS_POSTGRESQL_BIND_SRC})
    target_compile_features(dasModulePostgreSQL PRIVATE cxx_std_17)
    target_compile_definitions(dasModulePostgreSQL PRIVATE
        DAS_MOD_EXPORTS DAS_ENABLE_DLL=1
        $<$<CONFIG:Release>:DAS_NO_ASSERTIONS>
        $<$<CONFIG:MinSizeRel>:DAS_NO_ASSERTIONS>
        $<$<CONFIG:RelWithDebInfo>:DAS_NO_ASSERTIONS>
    )
    target_include_directories(dasModulePostgreSQL PRIVATE
        ${DASLANG_DIR}/include
        ${PQ_INCLUDE_DIRS}
        ${DAS_POSTGRESQL_DIR}/src
    )
    target_link_libraries(dasModulePostgreSQL PRIVATE ${PQ_LINK_LIBS})
    if(WIN32)
        if(EXISTS "${DASLANG_DIR}/lib/Release/libDaScriptDyn.lib")
            target_link_libraries(dasModulePostgreSQL PRIVATE
                ${DASLANG_DIR}/lib/Release/libDaScriptDyn.lib
                ${DASLANG_DIR}/lib/Release/libDaScriptDyn_runtime.lib
            )
        else()
            target_link_libraries(dasModulePostgreSQL PRIVATE
                ${DASLANG_DIR}/lib/libDaScriptDyn.lib
                ${DASLANG_DIR}/lib/libDaScriptDyn_runtime.lib
            )
        endif()
    elseif(APPLE)
        target_link_libraries(dasModulePostgreSQL PRIVATE
            ${DASLANG_DIR}/lib/liblibDaScriptDyn.dylib
            ${DASLANG_DIR}/lib/liblibDaScriptDyn_runtime.dylib
        )
    else()
        target_link_libraries(dasModulePostgreSQL PRIVATE
            ${DASLANG_DIR}/lib/liblibDaScriptDyn.so
            ${DASLANG_DIR}/lib/liblibDaScriptDyn_runtime.so
        )
    endif()
    if(UNIX)
        find_package(Threads REQUIRED)
        target_link_libraries(dasModulePostgreSQL PRIVATE Threads::Threads)
        if(NOT APPLE)
            target_link_libraries(dasModulePostgreSQL PRIVATE dl m)
        endif()
    endif()
    if(MSVC)
        target_compile_options(dasModulePostgreSQL PRIVATE /wd4005 /bigobj)
    else()
        # daslang runtime libs are built -fno-rtti for optimized configs; match the ABI
        # or the .shared_module mislinks.
        target_compile_options(dasModulePostgreSQL PRIVATE
            $<$<CONFIG:Release>:-fno-rtti>
            $<$<CONFIG:MinSizeRel>:-fno-rtti>
            $<$<CONFIG:RelWithDebInfo>:-fno-rtti>)
    endif()
    set_target_properties(dasModulePostgreSQL PROPERTIES
        SUFFIX ".shared_module"
        PREFIX ""
        RUNTIME_OUTPUT_DIRECTORY_RELEASE "${DAS_POSTGRESQL_DIR}"
        LIBRARY_OUTPUT_DIRECTORY "${DAS_POSTGRESQL_DIR}"
    )
    if(WIN32)
        # libpq + its dependent DLLs ride next to the .shared_module (the module
        # loader searches the loaded module's own directory for its dependents)
        FOREACH(_d ${PGSQL_RUNTIME_DLLS})
            add_custom_command(TARGET dasModulePostgreSQL POST_BUILD
                COMMAND ${CMAKE_COMMAND} -E copy_if_different
                    "${PGSQL_DIR}/bin/${_d}" "${DAS_POSTGRESQL_DIR}/${_d}")
        ENDFOREACH()
    endif()
ENDIF() # superbuild / standalone

ENDIF() # DAS_POSTGRESQL_INCLUDED guard
